docs_source/v3.2.1/Getting Started/user-ids.md
---
title: "Identifying Users"
slug: "user-ids"
excerpt: "How RevenueCat handles user identity"
hidden: false
metadata: 
  title: "Identifying users – RevenueCat"
  description: "RevenueCat provides a source of truth for a subscriber's status across different platforms. To do this, each subscriber has an App User ID that uniquely identifies them within your application."
  image: 
    0: "https://files.readme.io/db8af60-OG_image.png"
    1: "OG image.png"
    2: 1200
    3: 627
    4: "#e9acb0"
createdAt: {}
updatedAt: "2021-10-27T16:08:42.861Z"
---
[block:callout]
{
  "type": "warning",
  "title": "",
  "body": "To view documentation for the release version of our Identifying Users guide that uses `identify()` and `reset()`, head over to v3.1 of the docs: https://docs.revenuecat.com/v3.1/docs/user-ids"
}
[/block]
RevenueCat provides a source of truth for a subscriber's status across different platforms. To do this, each subscriber has an App User ID that uniquely identifies them within your application. 

User identity is one of the most important components of many mobile applications, and it's extra important to make sure the subscription status RevenueCat is tracking gets associated with the correct user.

The *Purchases SDK* allows you to specify your own user identifiers or use anonymous identifiers generated by RevenueCat. Some apps will use a combination of their own identifiers and RevenueCat anonymous Ids - that's okay!

# Anonymous App User IDs

If you don't provide an App User ID when instantiating the Purchases SDK, RevenueCat will generate a new random App User ID for you and cache it on the device. In the event that the user deletes and reinstalls the app, a new random App User ID will be generated.
[block:code]
{
  "codes": [
    {
      "code": "Purchases.configure(withAPIKey: \"my_api_key\")",
      "language": "swift"
    },
    {
      "code": "[RCPurchases configureWithAPIKey:@\"my_api_key\"];",
      "language": "objectivec"
    },
    {
      "code": "Purchases.configure(this, \"my_api_key\")",
      "language": "kotlin"
    },
    {
      "code": "Purchases.configure(this, \"my_api_key\");",
      "language": "java"
    },
    {
      "code": "await Purchases.setup(\"public_sdk_key\");",
      "language": "javascript",
      "name": "Flutter"
    },
    {
      "code": "Purchases.setup(\"public_sdk_key\");",
      "language": "javascript",
      "name": "React Native"
    },
    {
      "code": "Purchases.setup(\"public_sdk_key\");",
      "language": "javascript",
      "name": "Cordova"
    },
    {
      "code": "See Unity installation instructions https://docs.revenuecat.com/docs/unity",
      "language": "csharp",
      "name": "Unity"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "info",
  "body": "Anonymous App User Ids are always prefixed with `$RCAnonymousID:` for SDK versions 3+. This can be useful for working with anonymous users on your server."
}
[/block]
# Provided App User ID

Setting your own App User ID will allow you to reference users in the RevenueCat dashboard, via the API, as well as in the [webhooks](doc:webhooks) and other integrations.
[block:callout]
{
  "type": "info",
  "title": "",
  "body": "App User IDs are case-sensitive"
}
[/block]
Using an externally managed App User ID also provides a mechanism by which to restore purchases in a few scenarios: 
* When a user deletes and reinstalls your app - using the same App User ID will ensure they still have access to subscriptions previously started without requiring a [restore](doc:restoring-purchases) .
* When the user logs in on multiple devices - you can honor a subscription that was purchased on one device across any other platform.

## Provide App User ID on configuration
If you have your own App User IDs at app launch, you can pass those on instantiation to *Purchases*.
[block:code]
{
  "codes": [
    {
      "code": "Purchases.configure(withAPIKey: \"my_api_key\", appUserID: \"my_app_user_id\")",
      "language": "swift"
    },
    {
      "code": "[RCPurchases configureWithAPIKey:@\"my_api_key\" appUserID:@\"my_app_user_id\"];",
      "language": "objectivec"
    },
    {
      "code": "Purchases.configure(this, \"my_api_key\", \"my_app_user_id\")",
      "language": "kotlin"
    },
    {
      "code": "Purchases.configure(this, \"my_api_key\", \"my_app_user_id\");",
      "language": "java"
    },
    {
      "code": "await Purchases.setup(\"public_sdk_key\", appUserId: \"my_app_user_id\");",
      "language": "javascript",
      "name": "Flutter"
    },
    {
      "code": "Purchases.setup(\"public_sdk_key\", \"my_app_user_id\");",
      "language": "javascript",
      "name": "React Native"
    },
    {
      "code": "Purchases.setup(\"public_sdk_key\", \"my_app_user_id\");",
      "language": "javascript",
      "name": "Cordova"
    },
    {
      "code": "See Unity installation instructions https://docs.revenuecat.com/docs/unity",
      "language": "csharp",
      "name": "Unity"
    }
  ]
}
[/block]
Often times, you may not have your own App User IDs until later in the application lifecycle. In these cases, you can pass the App User ID  later through the `.logIn()` method.

## Provide App User ID after configuration
If your app doesn't receive its own App User ID until later in its lifecycle, you can set (or change) the App User ID at any time by calling `.logIn()`. If the logged in identity does not already exist in RevenueCat, it will be created automatically. 
[block:code]
{
  "codes": [
    {
      "code": "// Configure Purchases on app launch\nPurchases.configure(withAPIKey: \"my_api_key\")\n\n//...\n\n// Later log in provided user Id\nPurchases.shared.logIn(\"my_app_user_id\") { (purchaserInfo, created, error) in\n    // purchaserInfo updated for my_app_user_id\n}",
      "language": "swift"
    },
    {
      "code": "// Configure Purchases on app launch\n[RCPurchases configureWithAPIKey:@\"my_api_key\"];\n\n//...\n\n// Later log in provided user Id\n[[RCPurchases sharedPurchases] logIn:@\"my_app_user_id\" completionBlock:^(RCPurchaserInfo *purchaserInfo, Bool *created, NSError *error) {\n    // purchaserInfo updated for my_app_user_id\n}];",
      "language": "objectivec"
    },
    {
      "code": "// Configure Purchases on app launch\nPurchases.configure(this, \"my_api_key\")\n\n//...\n\n// Later log in provided user Id\nPurchases.sharedInstance.loginWith(\"my_app_user_id\", ::showError) { purchaserInfo, created ->\n  // purchaserInfo updated for my_app_user_id\n}",
      "language": "kotlin"
    },
    {
      "code": "// Configure Purchases on app launch\nPurchases.configure(this, \"my_api_key\");\n\n//...\n\n// Later log in provided user Id\nPurchases.getSharedInstance().logIn(\"my_app_user_id\", new LogInCallback() {\n\t@Override\n\tpublic void onReceived(@NotNull PurchaserInfo purchaserInfo, boolean created) {\n\t\t// purchaserInfo updated for my_app_user_id\n\t}\n  \n  @Override\n  public void onError(@NotNull PurchasesError error) {\n\n  }\n});",
      "language": "java"
    },
    {
      "code": "// Configure Purchases on app launch\nawait Purchases.setup(\"public_sdk_key\");\n\n//...\n\n// Later log in provided user Id\nLogInResult result = await Purchases.logIn(\"my_app_user_id\");",
      "language": "javascript",
      "name": "Flutter"
    },
    {
      "code": "// Configure Purchases on app launch\nPurchases.setup(\"public_sdk_key\");\n\n//...\n\n// Later log in provided user Id\nconst { purchaserInfo, created } = await Purchases.logIn(\"my_app_user_id\");\n// purchaserInfo updated for my_app_user_id",
      "language": "javascript",
      "name": "React Native"
    },
    {
      "code": "// Configure Purchases on app launch\nPurchases.setup(\"public_sdk_key\");\n\n//...\n\n// Later log in provided user Id\n\nPurchases.logIn(\n  \"my_app_user_id\", \n  ({ purchaserInfo, created }) => {\n    // purchaserInfo updated for my_app_user_id\n  },\n  error => {\n  }\n);",
      "language": "javascript",
      "name": "Cordova"
    },
    {
      "code": "purchases.LogIn(\"my_app_user_id\", (purchaserInfo, created, error) => {\n  // purchaserInfo updated for my_app_user_id\n});",
      "language": "csharp",
      "name": "Unity"
    }
  ]
}
[/block]
When going from an Anonymous ID to a Provided ID RevenueCat will decide whether the identities should be merged (aliased) into the same PurchaserInfo object or not depending on the state of the Provided ID and if it already has an anonymous alias.

### `logIn()` behavior
[block:parameters]
{
  "data": {
    "h-0": "Current App User ID",
    "h-1": "Provided App User ID already exists?",
    "h-2": "Provided App User ID has anonymous alias?",
    "0-0": "Anonymous",
    "0-1": "No",
    "1-1": "Yes",
    "1-0": "Anonymous",
    "3-0": "Non-anonymous",
    "3-1": "Any",
    "0-2": "N/A",
    "3-2": "Any",
    "1-2": "No",
    "h-3": "Result",
    "0-3": "Anonymous ID is aliased with Provided ID, PurchaserInfo merged.",
    "1-3": "Anonymous ID is aliased with Provided ID, PurchaserInfo merged.",
    "2-0": "Anonymous",
    "3-3": "PurchaserInfo changes to Provided ID, no aliases created.",
    "2-1": "Yes",
    "2-2": "Yes",
    "2-3": "PurchaserInfo changes to Provided ID, no aliases created."
  },
  "cols": 4,
  "rows": 4
}
[/block]
# Logging Out

When an identified user logs out you should call the `logOut()` method - this generates a new Anonymous App User Id for the logged out state.

## Logging back in
To log in a new user, the provided App User Id should be set again with `.logIn()`.

## Switching accounts
If you need to switch from one provided App User Id to another, it's okay to call the `.logIn()` method directly - you do not need to call `logOut()` first.

# Sharing Subscriptions Across Platforms

Subscription status is always tied to an App User ID in RevenueCat, not a device. You can share a subscription across platforms (e.g. iOS -> Android) by logging in the same App User ID. This is usually done through your own authentication mechanism.

Note that a user can only manage their subscription on the platform it was purchased from.

# Blocked App User IDs

Certain App User Ids are blocked in RevenueCat. This is by design to help developers that may be unintentionally passing non-unique strings as user identifiers. The current block-list is:
`'no_user'`, `'null'`, `'none'`, `'nil'`, `'(null)'`, `'\x00'`(`NULL` character), `''`(empty string), `'unidentified'`, `'undefined'`, `'unknown'`, `'anonymous'`, and `'guest'`.

# Tips for setting App User IDs

## App User IDs Should Not Be Guessable

RevenueCat provides subscription status via the public API, having App User IDs that are easily guessed is not good. It is recommended to use a non-guessable pseudo-random ID.

## Don't set emails as App User IDs

For the above reason, and GDPR compliance, we don't recommend using email addresses as App User IDs

## Don't set IDFA as App User IDs

Advertising identifiers should not be used as App User IDs since they can be easily rotated and are not unique across users if limit ad tracking is enabled.

## Don't hardcode strings as App User IDs

You should never hardcode a string as an App User ID, since every install will be treated as the same user in RevenueCat. **This will create problems and could unlock entitlements for users that haven't actually purchased.**

**Every app user ID must be unique per user.** If you don't have your own user IDs for some of your users, you should not pass any value for the App User ID on configuration which will rely on the anonymous IDs created by RevenueCat.

## Keep App User IDs shorter than 100 characters

App User IDs should not be longer than 100 characters.

# Next Steps

* Enrich your app by [reacting to the user's current subscription status :fa-arrow-right:](doc:purchaserinfo)
* If you're moving to RevenueCat from another system, see our guide on [migrating your existing subscriptions :fa-arrow-right:](doc:migrating-existing-subscriptions)
* Once you're ready to test your integration, you can follow our guides on [testing and debugging :fa-arrow-right:](doc:debugging)